# marcatili-1969-rectangular-waveguide

./: .editorconfig  .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  ESTRUTURA.md  README.md  readme.md
data/: README.md  readme.md
data/input/: readme.md  reproduce_fig10.json  reproduce_fig11.json  reproduce_fig6.json  reproduce_fig7.json  reproduce_fig8.json  reproduce_table1.json  solve_coupler.json  solve_single_guide.json  solve_single_guide_legacy_flat.json
data/input/fig6/: README.md  SG-006a.json  SG-006b.json  SG-006c.json  SG-006d.json  SG-006e.json  SG-006f.json  SG-006g.json  SG-006h.json  SG-006i.json  SG-006j.json  SG-006k.json  readme.md
data/output/: README.md  readme.md
data/output/fig6/: SG-006a.csv  SG-006a.json  SG-006b.csv  SG-006b.json  SG-006c.csv  SG-006c.json  SG-006d.csv  SG-006d.json  SG-006e.csv  SG-006e.json  SG-006f.csv  SG-006f.json  SG-006g.csv  SG-006g.json  SG-006h.csv  SG-006h.json  SG-006i.csv  SG-006i.json  SG-006j.csv  SG-006j.json  SG-006k.csv  SG-006k.json  readme.md
docs/: 00.1_figuras.md  00.2_casos_de_teste.md  00.4_relatorio_divergencias_figuras.md  00.5_avaliacao_plano_fases.md  00.6_revisao_camada_io.md  00_resumo.md  01_introduction.md  02_formulacao_do_problema_de_valor_de_contorno.md  02_symbol_dictionary.md  03.1_modos_Ex.md  03.1_modos_Ey.md  03.2_modos_Ex.md  03.2_modos_Ey.md  03.3_exemplos.md  03_guia_imerso_em_varios_dieletricos.md  04_acoplador_direcional.md  05_Acoplador direcional construído com guias ligeiramente diferentes.md  06_resumo_e_conclusoes.md  07_apendice_A.md  08_referencias.md  09_checklist_reproducao.md  10_fluxo_geral_do_repositorio.md  11_closed_form_vs_exact.md  12_trilha_equacoes_para_codigo.md  13_validacao_e_limites_do_modelo.md  14_diagramas_de_fluxo_e_sequencia.md  15_roteiro_de_estudo.md  20_auditoria_tecnica_do_modelo.md  21_validacao_figura_por_figura.md  22_matriz_artigo_para_codigo.md  23_riscos_tecnicos_e_pendencias.md  24_plano_de_melhoria_priorizado.md  25_dossie_de_fechamento_das_pendencias_centrais.md
docs/diagrams/: fluxo_geral.mmd  sequence_coupler_fig10_fig11.mmd  sequence_reproduce_fig6.mmd  sequence_reproduce_fig7.mmd  sequence_solve_single_guide.mmd
docs/refs/: README.md
include/: readme.md
include/marcatili/: placeholder_app.hpp  readme.md
include/marcatili/io/: coupler_io.hpp  fig10_io.hpp  fig11_io.hpp  fig6_io.hpp  fig7_io.hpp  fig8_io.hpp  readme.md  schema_json.hpp  single_guide_io.hpp  table1_io.hpp  text_io.hpp
include/marcatili/math/: readme.md  root_finding.hpp  waveguide_math.hpp
include/marcatili/physics/: coupler.hpp  fig10.hpp  fig11.hpp  fig6.hpp  fig7.hpp  fig8.hpp  metal_guide.hpp  readme.md  single_guide.hpp  slab_guide.hpp  table1.hpp
scripts/: README.md  compare_fig10_article.py  compare_fig11_article.py  compare_fig6_article.py  compare_fig7_article.py  compare_fig8_article.py  plot_fig10.py  plot_fig11.py  plot_fig6.py  plot_fig7.py  plot_fig8.py  readme.md  run.sh
scripts/run/: build.sh  build_fig10_article_comparison.sh  build_fig11_article_comparison.sh  build_fig6_article_comparisons.sh  build_fig7_article_comparison.sh  build_fig8_article_comparison.sh  check_reproduction.sh  clean.sh  clean_build_reproduce_all.sh  reproduce_all.sh  reproduce_fig10_case.sh  reproduce_fig11_case.sh  reproduce_fig6_panels.sh  reproduce_fig7_nomogram.sh  reproduce_fig8_case.sh
src/: placeholder_app.cpp  readme.md
src/apps/: readme.md  reproduce_fig10.cpp  reproduce_fig11.cpp  reproduce_fig6.cpp  reproduce_fig7.cpp  reproduce_fig8.cpp  reproduce_table1.cpp  solve_coupler.cpp  solve_single_guide.cpp
src/io/: coupler_io.cpp  fig10_io.cpp  fig11_io.cpp  fig6_io.cpp  fig7_io.cpp  fig8_io.cpp  readme.md  schema_json.cpp  single_guide_io.cpp  table1_io.cpp  text_io.cpp
src/math/: readme.md  root_finding.cpp  waveguide_math.cpp
src/physics/: coupler.cpp  fig10.cpp  fig11.cpp  fig6.cpp  fig7.cpp  fig8.cpp  metal_guide.cpp  readme.md  single_guide.cpp  slab_guide.cpp  table1.cpp
tests/: README.md  regression_checks.cpp
